--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,21 @@
     .button-main {
         @apply button bg-white hover:bg-gray-100 dark:bg-zinc-950
     }
+
+    .title {
+        @apply text-2xl text-black dark:text-gray-100 sm:text-4xl font-bold text-center mb-4
+    }
+
+    .paragraph {
+        @apply dark:text-gray-100 mb-3 leading-relaxed
+    }
+}
+
+.preview {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* number of lines to show */
+            line-clamp: 3; 
+    -webkit-box-orient: vertical;
 }
